# picoci

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  bsel.sh  build.sh  dlexample.bash  main.c  upload.sh
.github/workflows/: build.yml  push.yml
example/: .gitignore  CMakeLists.txt  Makefile  README.md
example/scripts/: bsel.sh  build.sh  deploy.sh  upload.sh
example/src/: main.c  state.c  state.h
example/tests/: state_from_char_returns_0_default.c  state_from_char_returns_0_when_0.c  state_from_char_returns_1_when_1.c
